# ugc_sprint_1

./: README.md
diagrams/: as_is.puml  to_be.puml
investigation_results/: .env.example  README.md  docker-compose.yaml  main.py
investigation_results/core/: config.py
investigation_results/data/node1/: config.xml
investigation_results/reader/: clickhouser_reader.py  vertica_reader.py
investigation_results/util/: create_data.py  init_clickhouse.py  init_vertica.py
investigation_results/writer/: clickhouse_writer.py  vertica_writer.py
ugc_api/: .env.example  Makefile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
ugc_api/docker/: Dockerfile  docker-entrypoint.sh
ugc_api/nginx/: nginx.conf
ugc_api/nginx/configs/: site.conf
ugc_api/src/: main.py
ugc_api/src/api/v1/: router.py  schemas.py
ugc_api/src/core/: settings.py
ugc_api/src/db/: base_broker.py  kafka.py
ugc_api/src/services/: ugc_service.py
ugc_etl/: .env.example  Makefile  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
ugc_etl/data/node1/: config.xml
ugc_etl/data/node2/: config.xml
ugc_etl/data/node3/: config.xml
ugc_etl/data/node4/: config.xml
ugc_etl/docker/: Dockerfile  docker-entrypoint.sh
ugc_etl/src/: main.py
ugc_etl/src/core/: config.py
ugc_etl/src/extract/: kafka_reader.py
ugc_etl/src/load/: clickhouse_writer.py
ugc_etl/src/models/: models.py
ugc_etl/src/transform/: transform.py
ugc_etl/src/util/: backoff.py  generate_messages.py  init_clickhouse.py  init_kafka.py
