[tool.poetry]
name = "ugc-etl"
version = "0.1.0"
description = "UGC etl"
authors = ["Steven Altamirano <steven.altamirano.games@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
aioch = "^0.0.2"
asyncio = "^3.4.3"
aiochclient = "2.5.1"
aiokafka = "^0.10.0"
aiohttp = "3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
